Fixed: Import list exclusion display overflow
Fixes #1140

--- a/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
+++ b/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
@@ -7,12 +7,12 @@
   line-height: 30px;
 }
 
-.authorName {
-  flex: 0 0 300px;
+.name {
+  flex: 1 0 300px;
 }
 
 .foreignId {
-  flex: 0 0 400px;
+  flex: 0 0 200px;
 }
 
 .actions {
